# OpenCloud

./: .gitignore  .project  CHANGELOG.md  Cargo.toml  Makefile.toml  ROADMAP.md  install.ps1  install.sh  readme.md
.github/: dependabot.yml
.github/workflows/: main.yml  rust.yml
client/: .gitignore  Cargo.toml  Makefile.toml  index.html
client/pkg/: index.html
client/src/: component.rs  lib.rs
client/src/account/: login.rs  mod.rs  signup.rs
client/src/component/: breadcrumb.rs  delete.rs  download.rs  dropdown.rs  folder_list.rs  footer.rs  mod.rs  uploadfile.rs
client/src/http/: mod.rs
client/src/http/delete/: delete.rs  mod.rs
client/src/http/get/: connect.rs  get_files.rs  mod.rs  refresh.rs
client/src/http/post/: create_user.rs  mod.rs  upload.rs
client/src/log/: login.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs  page.rs
server/src/http_handler/: default.rs  files.rs  mod.rs  users.rs
server/src/lib/: config.rs  default.rs  file.rs  http.rs  mod.rs
server/src/lib/archive/: archive.rs  mod.rs
server/src/lib/config/: config.rs  mod.rs
server/src/lib/database/: sqlite_conn.rs
server/src/lib/database/User/: create.rs
server/src/lib/db/: conn.rs  mod.rs  sqlite_conn.rs
server/src/lib/db/log/: create.rs  delete.rs  insert.rs  mod.rs  model.rs
server/src/lib/db/model/: User.rs
server/src/lib/db/user/: create.rs  create_home.rs  get.rs  insert.rs  mod.rs  model.rs  token.rs  update.rs  valid_session.rs
server/src/lib/default/: default.rs  mod.rs
server/src/lib/file/: default.rs  default_file.rs  file.rs  file_trait.rs  mod.rs
server/src/lib/http/: http.rs  mod.rs
server/src/lib/log/: log.rs  mod.rs
server/src/page/: client.rs  delete.rs  get.rs  mod.rs  p500.rs  post.rs
shared/: .gitignore  Cargo.toml
shared/src/: lib.rs
