[package]
name = "client"
version = "0.1.0"
authors = ["Rheydskey <matgag02@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]


[dependencies]
seed = {git = "https://github.com/seed-rs/seed.git"}
wasm-bindgen = "0.2.70"
serde = { version = "1.0.123", features = ['derive'] }
serde_json = {version = "1.0.62"}
futures = "0.3.12"
shared =  {path = "../shared"}
reqwest = {version="0.11.1", features=["json"]}
percent-encoding = "2.1.0"