[package]
name = "client"
version = "1.0.0"
authors = ["Rheydskey <matgag02@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]


[dependencies]
seed = {git = "https://github.com/seed-rs/seed.git"}
wasm-bindgen = "0.2.78"
serde = { version = "1.0.127", features = ['derive'] }
serde_json = {version = "1.0.64"}
futures = "0.3.16"
shared =  {path = "../shared"}
reqwest = {version="0.11.3", features=["multipart","json"]}
percent-encoding = "2.1.0"