[package]
name = "server"
version = "0.1.0"
authors = ["Rheydskey <matgag02@gmail.com>"]
edition = "2018"

[features]
log = []


[dependencies]
actix-web = "3.3.2"
actix-multipart = "0.3.0"
actix-utils = "2.0.0"

rand = "0.8.3"

zip = "0.5.10"
zip-extensions = "0.6.0"
tar = "0.4"

mime_guess = "2.0.3"

serde = {version = "1.0.123", features = ['derive']}
serde_json = "1.0.62"
serde_yaml = "0.8.17"

futures = "0.3.12"
futures-core = "0.3.12"
tokio-stream = "0.1.3"

bytes = "1.0.1"
include-flate = {version = "0.1.3", features = ["stable"]}

shared = {path = "../shared"}

datagn = {git = "https://github.com/Rheydskey/datagn.git"}
sqlx = {version = "=0.5.1", features = ["sqlite", "runtime-async-std-rustls"]}
whirlpool = "0.9.0"
funty="=1.1.0"

logger = {git = "https://github.com/Rheydskey/logger"}

time = "0.2.25"
async-std = "1.9.0"

chrono = "0.4.19"