[package]
name = "server"
version = "1.0.0"
authors = ["Rheydskey <matgag02@gmail.com>"]
edition = "2018"

[features]
default = ["log", "webclient", "sqlite", "mysql", "postgres"]

log = []

webclient = []

sqlite = ["datagn/sqlite"]

mysql = ["datagn/mysql"]

mssql = ["datagn/mssql"]

postgres = ["datagn/postgres"]

[dependencies]
actix-web = "3.3.2"
actix-multipart = "0.3.0"

rand = "0.8.4"

zip = "0.5.13"
zip-extensions = "0.6.1"
tar = "0.4.38"

mime_guess = "2.0.3"

serde = {version = "1.0.127", features = ['derive']}
serde_json = "1.0.64"
serde_yaml = "0.8.17"

tokio-stream = "0.1.7"

bytes = "1.0.1"
include-flate = {version = "0.1.3", features = ["stable"]}

shared = {path = "../shared"}

datagn = {git = "https://github.com/Rheydskey/datagn.git", features = ["config_serde"]}
sqlx = {version = "0.5.2", features = ["runtime-async-std-rustls"]}
whirlpool = "0.9.0"

logger = {git = "https://github.com/Rheydskey/logger", branch="master"}

time = "0.2.27"
async-std = "1.9.0"

chrono = "0.4.19"